# thirdwatch

./: .gitignore  .prettierignore  .thirdwatch.yml.example  .thirdwatchignore.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-CLOUD  Makefile  README.md  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.base.json  tsconfig.json  turbo.json
.changeset/: scanner-cli-interface.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
action/: CHANGELOG.md  action.yml  gitlab-ci-template.yml  package.json  thirdwatch-gate.sh
action/src/: cloud.ts  (+3 more)
docker/: .env.example  api.Dockerfile  compose.yml  watcher.Dockerfile  web.Dockerfile
docs/: pre-launch-checklist.md  self-hosted.md
fixtures/: README.md
fixtures/python-app/: Pipfile  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
fixtures/python-app/ai/: completion_service.py
fixtures/python-app/infra/: storage.py
fixtures/python-app/payments/: stripe_client.py
fixtures/rust-app/: Cargo.toml
fixtures/rust-app/src/: handler.rs  main.rs
migrations/: 001_initial.sql  003_impact_assessments.sql  004_notification_log.sql  005_cloud_platform.sql
schema/: registry.schema.json
scripts/: validate-registry.mjs
todos/: 001-done-p1-remove-incompatible-stripe-python-example.md  002-done-p1-fix-cjs-esm-exports-mismatch.md  003-done-p1-add-input-size-limit-parseTDMFromString.md  004-done-p1-add-maxLength-maxItems-schema-constraints.md  005-done-p1-own-TDMValidationIssue-type.md  006-done-p1-use-JSONSchemaType-to-close-schema-types-gap.md  (+49 more)
(+183 files in other folders)
