[project]
name = "payments-service"
version = "1.0.0"
dependencies = [
    "stripe>=7.0.0",
    "boto3~=1.34",
    "requests>=2.31,<3.0",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
