[package]
name = "payments-service"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
redis = "0.24"
serde = { version = "1.0", features = ["derive"] }
aws-sdk-s3 = "1.10"
stripe-rust = "0.26"
async-openai = "0.18"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.10"
